--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -67,8 +67,9 @@ header{
         margin: 30px 20px 15px;
         z-index: 1;
         input{
-            background-image: url('/assets/img/icons/search.svg');
+            background-image: url('https://happyfeys.github.io/todoList/assets/img/icons/search.svg');
             background-repeat: no-repeat;
+            background-size: contain;
             text-indent: 20px;
             border: none;
             border-radius: 20px;
