--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -118,6 +118,9 @@ main{
         overflow: hidden;
         margin: 10px 5px;
         box-shadow: 1px 1px 4px #333;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
         .zone__header{
             background-color: $dominant;
             padding: 3px;
@@ -193,5 +196,8 @@ main{
             height: 20px;
             padding: 5px;
         }
+    }
+    .task--checked{
+        background-color: #797878;
     }
 }
